# cmt_benchmark_data

./: .gitignore  README.md  README_ANON_HF.md  main.py  pyproject.toml
data_src/: cmt_data.yaml
eval_results/0920233747/: eval_stats_summary.yaml  failed_results.json  parser_stats_summary.yaml  success_results.json
eval_results/0921073736/: eval_stats_summary.yaml  failed_results.json  parser_stats_summary.yaml  success_results.json
query_results/: claude_3_7_sonnet_0920214246.json  claude_4_0_opus_0920214420.json  claude_4_0_sonnet_0920214352.json  claude_4_1_opus_0920214442.json  claude_4_1_sonnet_0920214345.json  deepseek_r1_0920214959.json  deepseek_v3_0920214141.json  gemini_2_0_flash_0920214137.json  gemini_2_5_flash_0920215129.json  gemini_2_5_pro_0920220846.json  gpt_4_1_0920214129.json  gpt_4o_0920214136.json  gpt_5_0920215357.json  gpt_5_mini_0920215030.json  gpt_5_nano_0920214630.json  gpt_o3_0920215313.json  gpt_o4_mini_0920214643.json  llama_maverick_0920214335.json
scripts/: build_jsonl.py  csv_to_yaml.py  evaluate.py  query_models.py  summarize_eval.py
scripts/config/: csv_config.yaml  eval_config.yaml  query_config.yaml  summary_config.yaml
src/cmtbench/: __init__.py  parser.py
src/cmtbench/config/: model_config.json
